# MWEngine

./: rickard-notes.txt
jni/: CMakeLists.txt  audioengine.cpp  audioengine.h  global.h  ringbuffer_cinder.h  sequencercontroller.cpp  spotifybuffer.cpp  spotifybuffer.h  spotifybuffer.java
jni/definitions/: notifications.h
jni/drivers/: adapter.cpp  adapter.h  oboe_io.cpp  oboe_io.h  opensl_io.c  opensl_io.h
jni/messaging/: notifier.cpp  observer.h
jni/processors/: phaser.cpp  phaser.h
